--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
-textX - Meta-language in Arpeggio inspired by Xtext
+textX - Meta-language for building Domain-Specific Languages (DSLs) in Python
 
 Author: Igor R. Dejanović <igor DOT dejanovic AT gmail DOT com>
 
