Link to contributors GitHub repo section.

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,5 @@
 textX - Meta-language for building Domain-Specific Languages (DSLs) in Python
 
-Author: Igor R. Dejanović <igor DOT dejanovic AT gmail DOT com>
+Maintainer: Igor R. Dejanović <igor DOT dejanovic AT gmail DOT com>
+Contributors: https://github.com/igordejanovic/textX/graphs/contributors
 
